Assets/RocketPunch/Bad/Samples/Sample01/AssetGroups/TextureGroup.asset
%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!114 &11400000
MonoBehaviour:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_GameObject: {fileID: 0}
  m_Enabled: 1
  m_EditorHideFlags: 0
  m_Script: {fileID: 11500000, guid: afe38423bb1d4552a0c1bdd2175c6f49, type: 3}
  m_Name: TextureGroup
  m_EditorClassIdentifier: 
  assets:
  - {fileID: 2800000, guid: 6a4b5a98e6d8d1f4093c4c42da2c0771, type: 3}
